src/components/molecules/M_Track/M_Track.module.scss
@use '@/styles/config.scss' as *;

.track {
  display: flex;
  align-items: center;
  gap: calc($space * 1.5);
  width: 100%;
  text-decoration: none;
  color: inherit;
  position: relative;
  z-index: 1;

  &::after {
    content: '';
    position: absolute;
    transition: all 400ms ease;
    top: -6px;
    left: 0;
    right: 0;
    width: 100%;
    height: 6px;
    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
    opacity: 0;
  }
}

.track:hover {
  &::after {
    content: '';
    position: absolute;
    top: -6px;
    left: 0;
    right: 0;
    width: 100%;
    height: 6px;
    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
    opacity: 1;
  }
}

.grad {
  --accent-rgb: 100 100 100;

  position: absolute;
  transition: all 400ms ease;
  opacity: 0;
  inset: 0;

  background: linear-gradient(
      to top,
      rgb(0 0 0 / 1) 0%,
      rgb(var(--accent-rgb) / 0.05098) 26%,
      rgb(var(--accent-rgb) / 0.05098) 74%,
      rgb(0 0 0 / 1) 100%
    ),
    linear-gradient(
      to right,
      rgb(0 0 0 / 1) 0%,
      rgb(var(--accent-rgb) / 0.58039) 17%,
      rgb(var(--accent-rgb) / 0.32157) 41%,
      rgb(0 0 0 / 1) 100%
    ),
    radial-gradient(
      farthest-side at 10% 50%,
      rgb(var(--accent-rgb) / 1) 0%,
      rgb(var(--accent-rgb) / 1) 30%,
      rgb(var(--accent-rgb) / 0.47843) 60%,
      rgb(0 0 0 / 1) 100%
    );
}

.track:hover .grad {
  opacity: 1;
}

.trackinfo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  z-index: 2;
}

.img {
  width: $track-size;
  height: $track-size;
  border-radius: $radius-tracks-img;
  z-index: 2;
}

.footer1 {
  @include label();
  display: inline-block;
  white-space: nowrap; /* Не переносить текст */
  overflow: hidden; /* Скрыть лишнее */
  text-overflow: ellipsis; /* Поставить троеточие */
}

@media screen and (max-width: 499px) {
  .track {
    display: flex;
    align-items: center;
    gap: calc($space * 3);
  }

  .img {
    width: 50px;
    height: 50px;
  }
}

